chois-webview/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chois-webview
  labels:
    name: chois-webview
    istio-injection: enabled
