chois-webview/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chois-webview
  namespace: chois
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "webview.choisproject.chuyong.kr"
        - "webview.choisproject.kr"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTP
      hosts:
        - 'webview.choisproject.chuyong.kr'
        - 'webview.choisproject.kr'
