chois-webview/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chois-webview
  namespace: chois
spec:
  hosts:
    - "webview.choisproject.chuyong.kr"
    - "webview.choisproject.kr"
  gateways:
    - chois-webview
  http:
    - name: "default-routes"
      route:
        - destination:
            host: chois-webview
            port:
              number: 80
